--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -452,6 +452,7 @@ bibliocraft {
     B:BookcaseFilled.6=false
     B:PrintingPress=false
     B:TypesettingMachine=false
+    B:tileBiblioFramedChest=false
 }
 
 
@@ -2094,6 +2095,7 @@ botania {
     B:buriedPetals.8=false
     B:buriedPetals.9=false
     B:cacophoniumBlock=false
+    B:cellBlock=false
     B:cocoon=false
     B:conjurationCatalyst=true
     B:corporeaCrystalCube=false
@@ -2197,6 +2199,7 @@ botania {
     B:forestDrum.1=false
     B:forestDrum.2=false
     B:forestEye=false
+    B:gaiaHeadBlock=false
     B:ghostRail=false
     B:hourglass=false
     B:incensePlate=false
@@ -2283,6 +2286,22 @@ botania {
     B:mushroom.9=false
     B:openCrate=false
     B:openCrate.1=false
+    B:pavement=true
+    B:pavement.1=true
+    B:pavement.2=true
+    B:pavement.3=true
+    B:pavement0Slab=false
+    B:pavement0SlabFull=true
+    B:pavement0Stairs=false
+    B:pavement1Slab=false
+    B:pavement1SlabFull=true
+    B:pavement1Stairs=false
+    B:pavement2Slab=false
+    B:pavement2SlabFull=true
+    B:pavement2Stairs=false
+    B:pavement3Slab=false
+    B:pavement3SlabFull=true
+    B:pavement3Stairs=false
     B:petalBlock=true
     B:petalBlock.1=true
     B:petalBlock.10=true
@@ -2370,6 +2389,7 @@ botania {
     B:redStringContainer=false
     B:redStringDispenser=false
     B:redStringFertilizer=false
+    B:redStringInterceptor=false
     B:redStringRelay=false
     B:reedBlock=true
     B:reedBlock0Slab=false
@@ -2887,12 +2907,18 @@ chisel {
     B:emeraldblock.9=true
     B:endStone=true
     B:endStone.1=true
+    B:endStone.10=true
+    B:endStone.11=true
+    B:endStone.12=true
+    B:endStone.13=true
     B:endStone.2=true
     B:endStone.3=true
     B:endStone.4=true
     B:endStone.5=true
     B:endStone.6=true
     B:endStone.7=true
+    B:endStone.8=true
+    B:endStone.9=true
     B:factoryblock=true
     B:factoryblock.1=true
     B:factoryblock.10=true
@@ -3538,12 +3564,15 @@ chisel {
     B:pumpkin9=false
     B:purpur=true
     B:purpur.1=true
+    B:purpur.10=true
     B:purpur.2=true
     B:purpur.3=true
     B:purpur.4=true
     B:purpur.5=true
     B:purpur.6=true
     B:purpur.7=true
+    B:purpur.8=true
+    B:purpur.9=true
     B:rebel=true
     B:rebel.1=true
     B:rebel.2=true
@@ -5774,6 +5803,13 @@ gardentrees {
     B:thinlog.1021=false
     B:thinlog.1022=false
     B:thinlog.1023=false
+    B:thinlog.1034=false
+    B:thinlog.1035=false
+    B:thinlog.1036=false
+    B:thinlog.1037=false
+    B:thinlog.1038=false
+    B:thinlog.1039=false
+    B:thinlog.1040=false
     B:thinlog.1088=false
     B:thinlog.1094=false
     B:thinlog.1098=false
@@ -5874,6 +5910,13 @@ gardentrees {
     B:thinlog.13309=false
     B:thinlog.13310=false
     B:thinlog.13311=false
+    B:thinlog.13322=false
+    B:thinlog.13323=false
+    B:thinlog.13324=false
+    B:thinlog.13325=false
+    B:thinlog.13326=false
+    B:thinlog.13327=false
+    B:thinlog.13328=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6033,6 +6076,13 @@ gardentrees {
     B:thinlog.5117=false
     B:thinlog.5118=false
     B:thinlog.5119=false
+    B:thinlog.5130=false
+    B:thinlog.5131=false
+    B:thinlog.5132=false
+    B:thinlog.5133=false
+    B:thinlog.5134=false
+    B:thinlog.5135=false
+    B:thinlog.5136=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6189,6 +6239,13 @@ gardentrees {
     B:thinlog.9213=false
     B:thinlog.9214=false
     B:thinlog.9215=false
+    B:thinlog.9226=false
+    B:thinlog.9227=false
+    B:thinlog.9228=false
+    B:thinlog.9229=false
+    B:thinlog.9230=false
+    B:thinlog.9231=false
+    B:thinlog.9232=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6259,6 +6316,13 @@ gardentrees {
     B:thinlogfence.1021=false
     B:thinlogfence.1022=false
     B:thinlogfence.1023=false
+    B:thinlogfence.1034=false
+    B:thinlogfence.1035=false
+    B:thinlogfence.1036=false
+    B:thinlogfence.1037=false
+    B:thinlogfence.1038=false
+    B:thinlogfence.1039=false
+    B:thinlogfence.1040=false
     B:thinlogfence.1088=false
     B:thinlogfence.1094=false
     B:thinlogfence.1098=false
@@ -6359,6 +6423,13 @@ gardentrees {
     B:thinlogfence.13309=false
     B:thinlogfence.13310=false
     B:thinlogfence.13311=false
+    B:thinlogfence.13322=false
+    B:thinlogfence.13323=false
+    B:thinlogfence.13324=false
+    B:thinlogfence.13325=false
+    B:thinlogfence.13326=false
+    B:thinlogfence.13327=false
+    B:thinlogfence.13328=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6518,6 +6589,13 @@ gardentrees {
     B:thinlogfence.5117=false
     B:thinlogfence.5118=false
     B:thinlogfence.5119=false
+    B:thinlogfence.5130=false
+    B:thinlogfence.5131=false
+    B:thinlogfence.5132=false
+    B:thinlogfence.5133=false
+    B:thinlogfence.5134=false
+    B:thinlogfence.5135=false
+    B:thinlogfence.5136=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6674,6 +6752,13 @@ gardentrees {
     B:thinlogfence.9213=false
     B:thinlogfence.9214=false
     B:thinlogfence.9215=false
+    B:thinlogfence.9226=false
+    B:thinlogfence.9227=false
+    B:thinlogfence.9228=false
+    B:thinlogfence.9229=false
+    B:thinlogfence.9230=false
+    B:thinlogfence.9231=false
+    B:thinlogfence.9232=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -8752,6 +8837,7 @@ opencomputers {
     B:printer=false
     B:raid=false
     B:redstone=false
+    B:relay=false
     B:robot=false
     B:robotAfterimage=false
     B:screen1=false
@@ -8759,6 +8845,7 @@ opencomputers {
     B:screen3=false
     B:serverRack=false
     B:switch=false
+    B:transposer=false
     B:waypoint=false
 }
 
