--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -66,8 +66,6 @@ general {
 
     # Set this to true if you are the chosen one. For lovers of glitch art and just general mad people.
     B:matrixMode.enabled=false
-
-    # Set to anything other than -1 for passive generation flowers (dayblooms, nightshades, hydroangeas) to die after a specific amount of ticks. 48000 is 2 Minecraft days, that's a recomended value.
     I:passiveWither.time=24000
 
     # Set this to true to set the power system's particles to be a lot more subtle. Good for low-end systems, if the particles are causing lag.
@@ -538,6 +536,12 @@ shedding {
     I:GrimoireOfGaia.Jorogumo.lexiconDisplaySize=40
     I:GrimoireOfGaia.Jorogumo.metadata=0
     I:GrimoireOfGaia.Jorogumo.rate=-1
+
+    # Configuration of Shedding for GrimoireOfGaia.Kobold
+    S:GrimoireOfGaia.Kobold.item=
+    I:GrimoireOfGaia.Kobold.lexiconDisplaySize=40
+    I:GrimoireOfGaia.Kobold.metadata=0
+    I:GrimoireOfGaia.Kobold.rate=-1
 
     # Configuration of Shedding for GrimoireOfGaia.Mandragora
     S:GrimoireOfGaia.Mandragora.item=
