--- a/config/bcadditions.cfg
+++ b/config/bcadditions.cfg
@@ -121,7 +121,9 @@ keb {
 misc {
     B:dusterParticles=true
     B:eurekaIntegration=true
+    B:forceEnableBCRefinery=false
     I:particleCount=100
+    B:powerpipesInPowerPlant=true
     B:shouldRegisterDusts=true
 }
 
