--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created Sep 6, 2015 9:51:24 PM
+; created Sep 26, 2015 1:50:38 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
