--- a/config/hqm/hqmconfig.cfg
+++ b/config/hqm/hqmconfig.cfg
@@ -5,7 +5,7 @@ general {
     B:"Auto-start hardcore mode"=false
 
     # If set to true, new worlds will automatically activate Questing mode
-    B:"Auto-start questing mode"=false
+    B:"Auto-start questing mode"=true
 
     # How many lives players should start with.
     I:"Default lives"=3
