--- a/config/GrimoireOfGaia.cfg
+++ b/config/GrimoireOfGaia.cfg
@@ -43,6 +43,7 @@ general {
     I:SpawnRateShaman=40
     I:SpawnRateSharko=40
     I:SpawnRateSiren=3
+    I:SpawnRateSpawnKobold=16
     I:SpawnRateSpawnMandragora=12
     I:SpawnRateSphinx=40
     I:SpawnRateSpriggan=30
