--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -10,7 +10,7 @@ general {
     B:waila.cfg.keybind=true
     B:waila.cfg.liquid=true
     I:waila.cfg.maxhpbeforetext=40
-    B:waila.cfg.metadata=true
+    B:waila.cfg.metadata=false
     B:waila.cfg.newfilters=true
     I:waila.cfg.posx=5000
     I:waila.cfg.posy=100
@@ -94,6 +94,7 @@ modules {
     B:tcon.table=true
     B:thaumcraft.aspects=true
     B:thermalexpansion.energyhandler=false
+    B:thermalexpansion.fluidamount=false
     B:thermalexpansion.owner=true
     B:vanilla.comparator=true
     B:vanilla.jukebox=true
