Update - see changelog for details

--- a/config/hqm/hqmconfig.cfg
+++ b/config/hqm/hqmconfig.cfg
@@ -29,7 +29,7 @@ general {
     B:ServerSync=false
 
     # Use this if you want the book to spawn on create world
-    B:SpawnBook=false
+    B:SpawnBook=true
 }
 
 
