--- a/config/AdvancedSystemsManager/AdvancedSystemsManager.cfg
+++ b/config/AdvancedSystemsManager/AdvancedSystemsManager.cfg
@@ -24,10 +24,25 @@ default_manager_settings {
 ##########################################################################################################
 # enable
 #--------------------------------------------------------------------------------------------------------#
-# Set true to enable, false to disable
+# Set false to disable tiles from being registered
 ##########################################################################################################
 
 enable {
+    B:asm_cable_ae=true
+    B:asm_cable_block_gate=true
+    B:asm_cable_bud=true
+    B:asm_cable_camo=true
+    B:asm_cable_cluster=true
+    B:asm_cable_fluid_gate=true
+    B:asm_cable_input=true
+    B:asm_cable_output=true
+    B:asm_cable_quantum=true
+    B:asm_cable_relay=true
+    B:asm_cable_rf=true
+    B:asm_cable_sign=true
+    B:asm_cable_valve=true
+    B:asm_cable_void=true
+    I:register_blocks=2
     B:system_cable_ae=true
 }
 
@@ -43,11 +58,12 @@ general {
 ##########################################################################################################
 # power_settings
 #--------------------------------------------------------------------------------------------------------#
-# Control the power settings of the manager, if enabled
+# Control the power settings of the manager, if enabled ##CURRENTLY NOT IMPLEMENTED##
 ##########################################################################################################
 
 power_settings {
     I:Camouflage=0
+    I:Comparator=0
     I:Condition=0
     I:"Condition (L)"=0
     I:"Condition (R)"=0
