--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -1964,6 +1964,7 @@ botania {
     B:bellows=false
     B:bifrost=false
     B:bifrostPerm=false
+    B:bifrostPermPane=false
     B:biomeStoneA=true
     B:biomeStoneA.1=true
     B:biomeStoneA.10=true
@@ -2102,6 +2103,7 @@ botania {
     B:corporeaFunnel=false
     B:corporeaIndex=false
     B:corporeaInterceptor=false
+    B:corporeaRetainer=false
     B:customBrick=true
     B:customBrick.1=true
     B:customBrick.10=true
@@ -2164,6 +2166,7 @@ botania {
     B:dreamwood1SlabFull=true
     B:dreamwood1Stairs=false
     B:elfGlass=false
+    B:elfGlassPane=false
     B:enchantedSoil=true
     B:enchanter=false
     B:endStoneBrick=true
@@ -2251,6 +2254,7 @@ botania {
     B:manaDetector=false
     B:manaFlame=false
     B:manaGlass=false
+    B:manaGlassPane=false
     B:manaVoid=false
     B:miniIsland=false
     B:miniIsland.1=false
@@ -2290,6 +2294,8 @@ botania {
     B:pavement.1=true
     B:pavement.2=true
     B:pavement.3=true
+    B:pavement.4=true
+    B:pavement.5=true
     B:pavement0Slab=false
     B:pavement0SlabFull=true
     B:pavement0Stairs=false
@@ -2302,6 +2308,12 @@ botania {
     B:pavement3Slab=false
     B:pavement3SlabFull=true
     B:pavement3Stairs=false
+    B:pavement4Slab=false
+    B:pavement4SlabFull=true
+    B:pavement4Stairs=false
+    B:pavement5Slab=false
+    B:pavement5SlabFull=true
+    B:pavement5Stairs=false
     B:petalBlock=true
     B:petalBlock.1=true
     B:petalBlock.10=true
@@ -2474,6 +2486,7 @@ botania {
     B:storage.3=true
     B:storage.4=true
     B:terraPlate=false
+    B:teruTeruBozu=false
     B:thatch=true
     B:thatch0Slab=false
     B:thatch0SlabFull=true
@@ -2586,6 +2599,8 @@ buildcraftcore {
     B:engineBlock.3=false
     B:eternalSpring=false
     B:eternalSpring.1=false
+    B:markerBlock=false
+    B:pathMarkerBlock=false
 }
 
 
@@ -7330,6 +7345,7 @@ immersiveintegration {
 integratedcircuits {
     B:integratedcircuitsassembler=false
     B:integratedcircuitspcblayout=false
+    B:integratedcircuitspcbprinter=false
     B:integratedcircuitssocket=false
 }
 
