--- a/config/IguanaTinkerTweaks/BlockOverride.cfg
+++ b/config/IguanaTinkerTweaks/BlockOverride.cfg
@@ -40,7 +40,7 @@
 ##########################################################################################################
 
 generaloredict {
-	Osmium=6
+	I:Osmium=6
 }
 
 
