--- a/config/IguanaTinkerTweaks/HarvestLevelNamesOverride.cfg
+++ b/config/IguanaTinkerTweaks/HarvestLevelNamesOverride.cfg
@@ -8,8 +8,19 @@
 ##########################################################################################################
 
 HarvestLevelNames {
-	Level3=Redstone
-	Level4=Diamond
+}
+
+
+harvestlevelnames {
+    S:Level0=Stone
+    S:Level1=Copper
+    S:Level2=Iron
+    S:Level3=Redstone
+    S:Level4=Diamond
+    S:Level5=Obsidian
+    S:Level6=Ardite
+    S:Level7=Cobalt
+    S:Level8=Manyullyn
 }
 
 
