--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -12,7 +12,7 @@ blueprints {
     S:excludedMods <
      >
 
-    # Location for the server blueprint database (used by all blueprint items).
+    # DEPRECATED - USED ONLY FOR COMPATIBILITY
     S:serverDatabaseDirectory="$MINECRAFT\config\buildcraft\blueprints\server"
 }
 
@@ -77,6 +77,9 @@ general {
     # Set the maximum marker range.
     I:markerRange=64
 
+    # Should BuildCraft miners be allowed to break blocks using player-specific protection?
+    B:miningBreaksPlayerProtectedBlocks=false
+
     # Should the mining well only be usable once after placing?
     I:miningDepth=256
 
@@ -99,7 +102,7 @@ general {
 
     # Should I check the BuildCraft version on startup?
     B:updateCheck=false
-    S:version=7.0.25
+    S:version=7.1.8
 
     pipes {
         # What should the base flow rate of a fluid pipe be?
@@ -126,6 +129,9 @@ general {
 
         # Should non-laser (crafting table) facade recipes be forced?
         B:facadeNoLaserRecipe=false
+
+        # Should all BC facades be shown in Creative/NEI, or just a few carefully chosen ones?
+        B:facadeShowAllInCreative=true
 
         # How hard to break should a pipe be?
         D:hardness=0.25
