--- a/config/eirairc/shared.cfg
+++ b/config/eirairc/shared.cfg
@@ -1,12 +1,25 @@
 # Configuration file
 
 ##########################################################################################################
+# addons
+#--------------------------------------------------------------------------------------------------------#
+# Settings for EiraIRC addons that are not part of the core of the mod.
+##########################################################################################################
+
+addons {
+}
+
+
+##########################################################################################################
 # bot
 #--------------------------------------------------------------------------------------------------------#
 # Bot settings and behaviour for the IRC chat. Can be overridden by servers and channels.
 ##########################################################################################################
 
 bot {
+    # If set to true, CTCP queries from this IRC context will be allowed.
+    B:allowCTCP=false
+
     # If set to true, private messages can be sent and received from this IRC context.
     B:allowPrivateMessages=true
 
@@ -79,7 +92,7 @@ bot {
 ##########################################################################################################
 
 general {
-    # A list of colors that players are not allowed to use as name colors when using the '/irc color' command.
+    # A list of colors that players are not allowed to use as name colors when using the '/irc color' command. [default: [black], [darkgray]]
     S:colorBlacklist <
         black
         darkgray
@@ -88,10 +101,8 @@ general {
     # [Advanced] If set to true, raw IRC messages will be printed into the log for investigation purposes.
     B:debugMode=false
 
-    # Default Chat
+    # The default chat target to select when opening the chat for the first time.
     S:defaultChat=Minecraft
-
-    # [Deprecated] If set to true, OPs can assign an alias for a MC nick that will be used instead.
     B:enablePlayerAliases=false
 
     # If set to true, players can use the '/irc color' command to set a color for their MC nick. See also: colorBlacklist
@@ -99,6 +110,9 @@ general {
 
     # If set to true, EiraIRC will attempt to strip player name tags such as [Admin] (that were added by other mods) when sending to IRC.
     B:hidePlayerTags=false
+
+    # The prefix to be used for running commands in an IRC channel.
+    S:ircCommandPrefix=!
 
     # This adds an invisible character to player names sent to IRC to prevent pinging those users of the same name on IRC. Thanks to Simon Meskens!
     B:preventUserPing=false
@@ -129,6 +143,8 @@ network {
 
     # [Advanced] The username to authenticate with the proxy, if necessary.
     S:proxyUsername=
+
+    # [Advanced] The path to a custom SSL truststore.
     S:sslCustomTrustStore=
 
     # [Advanced] If set to true, disables DiffieHellman encryption for SSL connections to work around a Java issue.
@@ -171,28 +187,28 @@ settings {
 
 theme {
     # Color for emote messages.
-    S:emoteTextColor=5
+    S:emoteTextColor=gold
 
     # Color for default IRC names.
-    S:ircNameColor=5
+    S:ircNameColor=gray
 
     # Color for IRC NOTICE messages.
-    S:ircNoticeTextColor=5
+    S:ircNoticeTextColor=red
 
     # Color for operator IRC names.
-    S:ircOpNameColor=5
+    S:ircOpNameColor=gold
 
     # Color for IRC names in private chat.
-    S:ircPrivateNameColor=5
+    S:ircPrivateNameColor=gray
 
     # Color for voiced IRC names.
-    S:ircVoiceNameColor=5
+    S:ircVoiceNameColor=gray
 
     # Color for default Minecraft names.
-    S:mcNameColor=5
+    S:mcNameColor=white
 
     # Color for operator Minecraft names.
-    S:mcOpNameColor=5
+    S:mcOpNameColor=red
 }
 
 
