--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6999,6 +6999,7 @@ harvestcraft {
     B:pamDragonfruit=false
     B:pamDurian=false
     B:pamFig=false
+    B:pamGooseberry=false
     B:pamGrapefruit=false
     B:pamLemon=false
     B:pamLime=false
@@ -7073,6 +7074,7 @@ harvestcraft {
     B:pamcottonCrop=false
     B:pamcranberryCrop=false
     B:pamcucumberCrop=false
+    B:pamcurryleafCrop=false
     B:pamdateSapling=false
     B:pamdragonfruitSapling=false
     B:pamdurianSapling=false
@@ -7080,6 +7082,7 @@ harvestcraft {
     B:pamfigSapling=false
     B:pamgarlicCrop=false
     B:pamgingerCrop=false
+    B:pamgooseberrySapling=false
     B:pamgrapeCrop=false
     B:pamgrapefruitSapling=false
     B:pamholidayCake=false
@@ -7124,6 +7127,7 @@ harvestcraft {
     B:pamryeCrop=false
     B:pamscallionCrop=false
     B:pamseaweedCrop=false
+    B:pamsesameseedsCrop=false
     B:pamsoybeanCrop=false
     B:pamspiceleafCrop=false
     B:pamspinachCrop=false
@@ -7135,6 +7139,7 @@ harvestcraft {
     B:pamturnipCrop=false
     B:pamvanillabeanSapling=false
     B:pamwalnutSapling=false
+    B:pamwaterchestnutCrop=false
     B:pamwhitemushroomCrop=false
     B:pamwintersquashCrop=false
     B:pamzucchiniCrop=false
