--- a/config/harvestcraft.cfg
+++ b/config/harvestcraft.cfg
@@ -49,6 +49,7 @@ dimensions {
     B:dragonfruittreeGeneration=true
     B:duriantreeGeneration=true
     B:figtreeGeneration=true
+    B:gooseberrytreeGeneration=true
     B:grapefruittreeGeneration=true
     B:lemontreeGeneration=true
     B:limetreeGeneration=true
@@ -156,6 +157,8 @@ general {
     B:enablecropitemsasseeds=true
     B:enablecroptoseedRecipe=true
     B:enableharvestcraftfish=true
+    B:enablelistAllwaterfreshwater=true
+    B:enablelistAllwatervanillawaterbucket=true
     B:enablesaltfromwaterbucketrecipe=true
     B:enabletofuasmeatinRecipes=true
     B:enabletofuasmilkinRecipes=true
@@ -199,6 +202,7 @@ seeds {
     B:cottonseeddropfromgrass=true
     B:cranberryseeddropfromgrass=true
     B:cucumberseeddropfromgrass=true
+    B:curryleafseeddropfromgrass=false
     B:eggplantseeddropfromgrass=true
     B:garlicseeddropfromgrass=true
     B:gingerseeddropfromgrass=true
@@ -223,6 +227,7 @@ seeds {
     B:scallionseeddropfromgrass=true
     B:seaweedseeddropfromgrass=true
     I:seedrarity=1
+    B:sesameseedsseeddropfromgrass=false
     B:soybeanseeddropfromgrass=true
     B:spiceleafseeddropfromgrass=true
     B:spinachseeddropfromgrass=true
@@ -232,6 +237,7 @@ seeds {
     B:teaseeddropfromgrass=true
     B:tomatoseeddropfromgrass=true
     B:turnipseeddropfromgrass=true
+    B:waterchestnutseeddropfromgrass=false
     B:whitemushroomseeddropfromgrass=true
     B:wintersquashseeddropfromgrass=true
     B:zucchiniseeddropfromgrass=true
