--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2412,6 +2412,14 @@ botania {
     B:root=true
     B:runeAltar=false
     B:seaLamp=true
+    B:shimmerrock=true
+    B:shimmerrock0Slab=false
+    B:shimmerrock0SlabFull=true
+    B:shimmerrock0Stairs=false
+    B:shimmerwoodPlanks=true
+    B:shimmerwoodPlanks0Slab=false
+    B:shimmerwoodPlanks0SlabFull=true
+    B:shimmerwoodPlanks0Stairs=false
     B:shinyFlower=false
     B:shinyFlower.1=false
     B:shinyFlower.10=false
@@ -5827,6 +5835,10 @@ gardentrees {
     B:thinlog.1038=false
     B:thinlog.1039=false
     B:thinlog.1040=false
+    B:thinlog.1043=false
+    B:thinlog.1044=false
+    B:thinlog.1045=false
+    B:thinlog.1046=false
     B:thinlog.1088=false
     B:thinlog.1094=false
     B:thinlog.1098=false
@@ -5934,6 +5946,10 @@ gardentrees {
     B:thinlog.13326=false
     B:thinlog.13327=false
     B:thinlog.13328=false
+    B:thinlog.13331=false
+    B:thinlog.13332=false
+    B:thinlog.13333=false
+    B:thinlog.13334=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -6100,6 +6116,10 @@ gardentrees {
     B:thinlog.5134=false
     B:thinlog.5135=false
     B:thinlog.5136=false
+    B:thinlog.5139=false
+    B:thinlog.5140=false
+    B:thinlog.5141=false
+    B:thinlog.5142=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -6263,6 +6283,10 @@ gardentrees {
     B:thinlog.9230=false
     B:thinlog.9231=false
     B:thinlog.9232=false
+    B:thinlog.9235=false
+    B:thinlog.9236=false
+    B:thinlog.9237=false
+    B:thinlog.9238=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -6340,6 +6364,10 @@ gardentrees {
     B:thinlogfence.1038=false
     B:thinlogfence.1039=false
     B:thinlogfence.1040=false
+    B:thinlogfence.1043=false
+    B:thinlogfence.1044=false
+    B:thinlogfence.1045=false
+    B:thinlogfence.1046=false
     B:thinlogfence.1088=false
     B:thinlogfence.1094=false
     B:thinlogfence.1098=false
@@ -6447,6 +6475,10 @@ gardentrees {
     B:thinlogfence.13326=false
     B:thinlogfence.13327=false
     B:thinlogfence.13328=false
+    B:thinlogfence.13331=false
+    B:thinlogfence.13332=false
+    B:thinlogfence.13333=false
+    B:thinlogfence.13334=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6613,6 +6645,10 @@ gardentrees {
     B:thinlogfence.5134=false
     B:thinlogfence.5135=false
     B:thinlogfence.5136=false
+    B:thinlogfence.5139=false
+    B:thinlogfence.5140=false
+    B:thinlogfence.5141=false
+    B:thinlogfence.5142=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6776,6 +6812,10 @@ gardentrees {
     B:thinlogfence.9230=false
     B:thinlogfence.9231=false
     B:thinlogfence.9232=false
+    B:thinlogfence.9235=false
+    B:thinlogfence.9236=false
+    B:thinlogfence.9237=false
+    B:thinlogfence.9238=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
