--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -83,6 +83,9 @@ general {
     # Set this to false to make the Ring of Odin not apply fire resistance. Mostly for people who use Witchery transformations.
     B:ringOfOdin.fireResist=true
 
+    # Set this to false to disable seasonal features, such as halloween and christmas.
+    B:seasonalFeatures.enabled=true
+
     # Set this to false to disable the use of shaders for some of the mod's renders.
     B:shaders.enabled=true
 
@@ -1902,56 +1905,38 @@ shedding {
     I:mad_scientist.lexiconDisplaySize=40
     I:mad_scientist.metadata=0
     I:mad_scientist.rate=-1
-
-    # Configuration of Shedding for menagerie.ant
     S:menagerie.ant.item=
     I:menagerie.ant.lexiconDisplaySize=40
     I:menagerie.ant.metadata=0
     I:menagerie.ant.rate=-1
-
-    # Configuration of Shedding for menagerie.ghost
     S:menagerie.ghost.item=
     I:menagerie.ghost.lexiconDisplaySize=40
     I:menagerie.ghost.metadata=0
     I:menagerie.ghost.rate=-1
-
-    # Configuration of Shedding for menagerie.infestedVillager
     S:menagerie.infestedVillager.item=
     I:menagerie.infestedVillager.lexiconDisplaySize=40
     I:menagerie.infestedVillager.metadata=0
     I:menagerie.infestedVillager.rate=-1
-
-    # Configuration of Shedding for menagerie.lepus
     S:menagerie.lepus.item=
     I:menagerie.lepus.lexiconDisplaySize=40
     I:menagerie.lepus.metadata=0
     I:menagerie.lepus.rate=-1
-
-    # Configuration of Shedding for menagerie.livingarmor
     S:menagerie.livingarmor.item=
     I:menagerie.livingarmor.lexiconDisplaySize=40
     I:menagerie.livingarmor.metadata=0
     I:menagerie.livingarmor.rate=-1
-
-    # Configuration of Shedding for menagerie.manticore
     S:menagerie.manticore.item=
     I:menagerie.manticore.lexiconDisplaySize=40
     I:menagerie.manticore.metadata=0
     I:menagerie.manticore.rate=-1
-
-    # Configuration of Shedding for menagerie.mummy
     S:menagerie.mummy.item=
     I:menagerie.mummy.lexiconDisplaySize=40
     I:menagerie.mummy.metadata=0
     I:menagerie.mummy.rate=-1
-
-    # Configuration of Shedding for menagerie.oliphant
     S:menagerie.oliphant.item=
     I:menagerie.oliphant.lexiconDisplaySize=40
     I:menagerie.oliphant.metadata=0
     I:menagerie.oliphant.rate=-1
-
-    # Configuration of Shedding for menagerie.rat
     S:menagerie.rat.item=
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
