--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Wed Oct 14 16:53:57 MDT 2015
+#Thu Nov 05 17:37:36 MST 2015
 logoTexture=textures/gui/title/mojang.png
 background=0xFFFFFF
 font=0x0
