--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://www.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Oct 14 16:55:43 MDT 2015
+#Thu Nov 05 17:39:17 MST 2015
 enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
